--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <title>Todo-App</title>
   </head>
   <body>
-    <div class="container fluid">
+    <div class="container">
       <div class="input-group mb-3">
         <button
           class="btn btn-outline-secondary todoBtn"
