--- a/home.html
+++ b/home.html
@@ -37,10 +37,13 @@
           Add
         </button>
       </div>
-      <div class="todoTable"></div>
-      <button type="button" class="btn btn-outline-warning removeBtn">
-        Remove
-      </button>
+      <div class="todoTable">
+        <div>
+          <button type="button" class="btn btn-outline-warning removeBtn">
+            Remove
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
