--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     <title>Todo-App</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-md">
       <h1>Todos!</h1>
       <div class="input-group mb-3">
         <input
@@ -39,7 +39,10 @@
       </div>
       <div class="todoTable">
         <div>
-          <button type="button" class="btn btn-outline-warning removeBtn">
+          <button
+            type="button"
+            class="btn btn-outline-warning removeBtn fade-in-animation"
+          >
             Remove
           </button>
         </div>
